--- a/locales/en-GB.json
+++ b/locales/en-GB.json
@@ -9,7 +9,34 @@
     ["/", "Home"],
     ["/introduction/", "Introduction"],
     ["/methodology/", "Methodology"],
-    ["/data-notes/", "Data Notes"]
+    ["/data-notes/", "Data Notes"],
+    ["/data/", "Data"]
+  ],
+  "dataSidebarOverview": [
+    ["/data/", "Overview"]
+  ],
+  "dataSidebarDropdowns": [
+    {
+      "path": "/data/countries/",
+      "name": "data-countries",
+      "label": "by Country",
+      "all": "All Countries",
+      "field": "recipient_country_or_region"
+    },
+    {
+      "path": "/data/providers/",
+      "name": "data-providers",
+      "label": "by Provider",
+      "all": "All Providers",
+      "field": "reporting_organisation"
+    },
+    {
+      "path": "/data/sectors/",
+      "name": "data-sectors",
+      "label": "by Sector",
+      "all": "All Sectors",
+      "field": "sector_category"
+    }
   ],
   "translations": {
     "selectCountry": "Select a country",
