Overview rather than summary

--- a/locales/en-GB.json
+++ b/locales/en-GB.json
@@ -13,7 +13,7 @@
     ["/data/", "Data"]
   ],
   "dataSidebarOverview": [
-    ["/data/", "Overview"]
+    ["/data/", "Summary"]
   ],
   "dataSidebarDropdowns": [
     {
