--- a/locales/en-GB.json
+++ b/locales/en-GB.json
@@ -78,9 +78,9 @@
       "finance_type": "Finance Type",
       "flow_type": "Flow Type",
       "provider_organisation": "Provider Organisation",
-      "provider_organisation_type": "Provider Organisation Type",
+      "provider_organisation.type": "Provider Organisation Type",
       "receiver_organisation": "Receiver Organisation",
-      "receiver_organisation_type": "Receiver Organisation Type",
+      "receiver_organisation.type": "Receiver Organisation Type",
       "recipient_country_or_region": "Recipient Country or Region",
       "multi_country": "Multi Country",
       "sector_category": "Sector Category",
