--- a/locales/fr-FR.json
+++ b/locales/fr-FR.json
@@ -75,9 +75,9 @@
       "finance_type": "Type de financement",
       "flow_type": "Type de flux",
       "provider_organisation": "Organisme prestataire",
-      "provider_organisation_type": "Type d’organisme prestataire",
+      "provider_organisation.type": "Type d’organisme prestataire",
       "receiver_organisation": "Organisme bénéficiaire",
-      "receiver_organisation_type": "Type d’organisme bénéficiaire",
+      "receiver_organisation.type": "Type d’organisme bénéficiaire",
       "recipient_country_or_region": "Pays ou région bénéficiaire",
       "multi_country": "Multipays",
       "sector_category": "Catégorie de secteur",
