--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,59 +10,71 @@
   "aboutNav": [
     ["/fr/introduction/", "Introduction"],
     ["/fr/methodology/", "Méthodologie"],
-    ["/fr/data-notes/", "Notes sur les données"]
+    ["/fr/data-notes/", "Notes sur les données"],
+    ["/fr/guidance-analysis/", "Lignes directrices et tableaux de bord d’analyse Excel"]
   ],
-  "translations": {
-    "selectCountry": "Choisir un pays",
-    "downloadFile": "Télécharger le fichier",
-    "lastUpdated": "Dernière mise à jour :",
-    "language": "Langue"
-  },
+  "accessAnalyseOptions": [
+    {
+      "value": "9PNZw4cJXe8",
+      "text": "Accéder aux données et les comprendre"
+    },
+    {
+      "value": "n4dOv-VZT1Y",
+      "text": "Analyser les données"
+    }
+  ],
+  "homepageLookingGuidanceAnalysis": "À la recherche des lignes directrices et des tableaux de bord d’analyse ? Nous avons déplacé ce contenu dans la section À propos.",
+  "exploreDataDashboards": "Découvrez les tableaux de bord de données",
   "by": "par",
   "dataDashboards": {
-    "label": "Tableaux de bords",
+    "label": "Tableaux de bord",
     "overview": "Vue d’ensemble",
-    "dashboards": "Tableaux de bords:",
+    "dashboards": "Tableaux de bord :",
     "customise": "Personnaliser",
-    "customDownload": "Personnaliser les données à télécharger",
-    "columns": "Colonne",
-    "selectColumns": "Sélectionnez les colonnes",
-    "selectAtLeastOneColumn": "Il faut sélectionner au moins une colonne",
-    "dragColumnsToReorder": "Faites glisser les colonnes pour réorganiser la sortie des données.",
+    "customDownload": "Téléchargement de données personnalisées",
+    "columns": "Colonnes",
+    "selectColumns": "Sélectionner les colonnes",
+    "selectAtLeastOneColumn": "Veuillez sélectionner au moins une colonne.",
+    "dragColumnsToReorder": "Faites glisser les colonnes pour réorganiser la présentation des données.",
     "deselect": "Désélectionner",
     "filters": "Filtres",
     "preview": "Aperçu",
-    "currency": "Monnaie",
-    "spendingType": "Spending Type",
+    "currency": "Devise",
     "calendarYear": "Année civile",
     "calendarYearAndQuarter": "Année et trimestre civils",
     "moreFilters": "Plus de filtres",
     "numberOfResults": "Nombre de résultats",
     "displayOptions": "Options d’affichage",
-    "noResults": "Aucun résultat.",
-    "selectSomeOptions": "Select some options, and then click Run on the left.",
+    "noResults": "Aucun résultat ne correspond aux filtres sélectionnés.",
+    "selectSomeOptions": "Sélectionnez plusieurs options, puis lancez la recherche.",
     "amount": "Valeur",
     "budgetsSpending": {
       "budgetsOrSpending": "Type de dépenses",
       "budgets": "Budgets",
       "spending": "Dépenses",
-      "both": "les deux"
+      "both": "Budgets et dépenses"
     },
-    "transactionTypes": "Type de transaction",
+    "transactionTypes": "Transaction Type",
     "switchTransactionTypes": {
       "toAdvanced": "Switch to advanced: select transaction types",
       "toSimple": "Switch to simple: select budget and/or spending"
     },
+    "reportingOrganisationGroup": {
+      "select": "Select groups of reporting organisations",
+      "apply": "Apply",
+      "label": "Reporting Organisation Group",
+      "selectOne": "Select one..."
+    },
     "countries": {
-      "by": "par Pays",
-      "label": "Pays",
+      "by": "par Pays ou région bénéficiaire ",
+      "label": "Pays ou région bénéficiare",
       "for": "Tableau de bord du pays pour",
-      "select": "Choisir un pays pour explorer les données."
+      "select": "Choisir un pays ou région pour explorer les données."
     },
     "providers": {
-      "by": "par Prestataire",
-      "label": "Prestataires",
-      "for": "Tableau de bord du prestataire pour",
+      "by": "par Organisme déclarant",
+      "label": "Organismes déclarants",
+      "for": "Tableau de bord d'organisme déclarant pour",
       "select": "Choisir un prestataire pour explorer les données."
     },
     "sectors": {
@@ -98,24 +110,30 @@
   },
   "dataSidebarDropdowns": [
     {
-      "path": "/fr/data/countries/",
-      "name": "data-countries",
-      "label": "par Pays",
+      "path": "/fr/data/recipient-country-or-region/",
+      "name": "data-recipient-country-or-region",
+      "label": "par Pays ou région bénéficiaire",
       "field": "recipient_country_or_region"
     },
     {
-      "path": "/fr/data/providers/",
-      "name": "data-providers",
-      "label": "par Prestataire",
+      "path": "/fr/data/reporting-organisation/",
+      "name": "data-reporting-organisation",
+      "label": "par Organisme déclarant",
       "field": "reporting_organisation"
     },
     {
-      "path": "/fr/data/sectors/",
-      "name": "data-sectors",
-      "label": "par Secteur",
+      "path": "/fr/data/sector-category/",
+      "name": "data-sector-category",
+      "label": "par Catégorie de secteur",
       "field": "sector_category"
     }
   ],
+  "translations": {
+    "selectCountry": "Choisir un pays",
+    "downloadFile": "Télécharger le fichier",
+    "lastUpdated": "Dernière mise à jour :",
+    "language": "Langue"
+  },
   "countriesCurrenciesFields": [
     {
       "key": "countryCode",
