--- a/locales/pt.json
+++ b/locales/pt.json
@@ -68,19 +68,19 @@
     "countries": {
       "by": "por País ou região recetor",
       "label": "País ou região recetor",
-      "for": "Painel do país para",
+      "for": "Painel para",
       "select": "Selecione um país ou região para explorar os dados."
     },
     "providers": {
       "by": "por Organização relatora",
       "label": "Organizaçãos relatoras",
-      "for": "Painel do organização relatora para",
+      "for": "Painel para",
       "select": "Selecione um organização relatora para explorar os dados."
     },
     "sectors": {
       "by": "por Sector",
       "label": "Sectores",
-      "for": "Painel do sector para",
+      "for": "Painel para",
       "select": "Selecione um sector para explorar os dados."
     },
     "summary": "Resumo",
