Show activity description, adjust format of organisation types

--- a/locales/en.json
+++ b/locales/en.json
@@ -88,15 +88,16 @@
     "availableDrilldowns": {
       "activity.iati_identifier": "Activity IATI Identifier",
       "activity.title": "Activity Title",
+      "activity.description": "Activity Description",
       "reporting_organisation": "Reporting Organisation",
       "reporting_organisation_type": "Reporting Organisation Type",
       "aid_type": "Aid Type",
       "finance_type": "Finance Type",
       "flow_type": "Flow Type",
       "provider_organisation": "Provider Organisation",
-      "provider_organisation.type": "Provider Organisation Type",
+      "provider_organisation_type": "Provider Organisation Type",
       "receiver_organisation": "Receiver Organisation",
-      "receiver_organisation.type": "Receiver Organisation Type",
+      "receiver_organisation_type": "Receiver Organisation Type",
       "recipient_country_or_region": "Recipient Country or Region",
       "multi_country": "Multi Country",
       "sector_category": "Sector Category",
