--- a/locales/fr.json
+++ b/locales/fr.json
@@ -88,15 +88,16 @@
     "availableDrilldowns": {
       "activity.iati_identifier": "Identifiant de l’IITA",
       "activity.title": "Titre",
+      "activity.description": "Activity Description",
       "reporting_organisation": "Organisme déclarant",
       "reporting_organisation_type": "Type d’organisme déclarant",
       "aid_type": "Type d’aide",
       "finance_type": "Type de financement",
       "flow_type": "Type de flux",
       "provider_organisation": "Organisme prestataire",
-      "provider_organisation.type": "Type d’organisme prestataire",
+      "provider_organisation_type": "Type d’organisme prestataire",
       "receiver_organisation": "Organisme bénéficiaire",
-      "receiver_organisation.type": "Type d’organisme bénéficiaire",
+      "receiver_organisation_type": "Type d’organisme bénéficiaire",
       "recipient_country_or_region": "Pays ou région bénéficiaire",
       "multi_country": "Multipays",
       "sector_category": "Catégorie de secteur",
