--- a/locales/pt.json
+++ b/locales/pt.json
@@ -88,15 +88,16 @@
     "availableDrilldowns": {
       "activity.iati_identifier": "Identificador de atividade da IATI",
       "activity.title": "Título da atividade",
+      "activity.description": "Activity Description",
       "reporting_organisation": "Organização relatora",
       "reporting_organisation_type": "Tipo de organização relatora",
       "aid_type": "Tipo de ajuda",
       "finance_type": "Tipo de financiamento",
       "flow_type": "Tipo de fluxo",
       "provider_organisation": "Organização prestadora",
-      "provider_organisation.type": "Tipo de organização prestadora",
+      "provider_organisation_type": "Tipo de organização prestadora",
       "receiver_organisation": "Organização recetora",
-      "receiver_organisation.type": "Tipo de organização recetora",
+      "receiver_organisation_type": "Tipo de organização recetora",
       "recipient_country_or_region": "País ou região recetor",
       "multi_country": "Plurinacional",
       "sector_category": "Categoria de sector",
