--- a/locales/es.json
+++ b/locales/es.json
@@ -88,15 +88,16 @@
     "availableDrilldowns": {
       "activity.iati_identifier": "Identificador de la IATI de la actividad",
       "activity.title": "Título de la actividad",
+      "activity.description": "Activity Description",
       "reporting_organisation": "Organización notificadora",
       "reporting_organisation_type": "Tipo de organización notificadora",
       "aid_type": "Tipo de ayuda",
       "finance_type": "Tipo de financiación",
       "flow_type": "Tipo de flujo",
       "provider_organisation": "Organización proveedora",
-      "provider_organisation.type": "Tipo de organización proveedora",
+      "provider_organisation_type": "Tipo de organización proveedora",
       "receiver_organisation": "Organización receptora",
-      "receiver_organisation.type": "Tipo de organización receptora",
+      "receiver_organisation_type": "Tipo de organización receptora",
       "recipient_country_or_region": "País o región receptores",
       "multi_country": "Multinacional",
       "sector_category": "Categoría de sector",
