--- a/locales/en.json
+++ b/locales/en.json
@@ -55,7 +55,7 @@
     "selectSomeOptions": "Select some options, and then click Run on the left.",
     "amount": "Value",
     "budgetsSpending": {
-      "budgetsOrSpending": "Resource flows",
+      "budgetsOrSpending": "Resource Flows",
       "budgets": "Budgets",
       "spending": "Spending",
       "both": "Both"
