--- a/locales/en.json
+++ b/locales/en.json
@@ -61,6 +61,7 @@
       "description": "Description",
       "select": "Select"
     },
+    "advancedSearchFilter": "Type to search for name or description...",
     "budgetsSpending": {
       "budgetsOrSpending": "Resource Flows",
       "budgets": "Budgets",
