--- a/locales/es.json
+++ b/locales/es.json
@@ -54,6 +54,14 @@
     "noResults": "Los filtros seleccionados no han arrojado resultados.",
     "selectSomeOptions": "Seleccione algunas opciones y haga clic en “Ejecutar” a la izquierda.",
     "amount": "Valor",
+    "advancedSearch": "Búsqueda avanzada",
+    "advancedSearchFields": {
+      "code": "Código",
+      "name": "Nombre",
+      "description": "Description",
+      "select": "Seleccione"
+    },
+    "advancedSearchFilter": "Type to search for name or description...",
     "budgetsSpending": {
       "budgetsOrSpending": "Flujos de Recursos",
       "budgets": "Presupuestos",
