--- a/locales/en.json
+++ b/locales/en.json
@@ -11,7 +11,7 @@
     ["/introduction/", "Introduction"],
     ["/methodology/", "Methodology"],
     ["/data-notes/", "Data Notes"],
-    ["/guidance-analysis/", "Guidance and Excel Analysis Dashboards"]
+    ["/guidance-analysis/", "Guidance"]
   ],
   "accessAnalyseOptions": [
     {
@@ -54,6 +54,7 @@
     "noResults": "There are no results for your selected filters.",
     "selectSomeOptions": "Select some options, and then click Run on the left.",
     "amount": "Value",
+    "clearField": "Clear",
     "advancedSearch": "Advanced Search",
     "advancedSearchFields": {
       "code": "Code",
@@ -70,8 +71,8 @@
     },
     "transactionTypes": "Transaction Type",
     "switchTransactionTypes": {
-      "toAdvanced": "Switch to advanced: select transaction types",
-      "toSimple": "Switch to simple: select budget and/or spending"
+      "toAdvanced": "Switch to advanced view: select transaction types",
+      "toSimple": "Switch to simple view: select budget and/or spending"
     },
     "reportingOrganisationGroup": {
       "select": "Select groups of reporting organisations for organisations that publish data under multiple reporting organisations.",
