--- a/locales/pt.json
+++ b/locales/pt.json
@@ -11,7 +11,7 @@
     ["/pt/introduction/", "Introdução"],
     ["/pt/methodology/", "Metodologia"],
     ["/pt/data-notes/", "Notas sobre os dados"],
-    ["/pt/guidance-analysis/", "Orientações e painéis de análise Excel"]
+    ["/pt/guidance-analysis/", "Orientações"]
   ],
   "accessAnalyseOptions": [
     {
@@ -54,6 +54,7 @@
     "noResults": "Não há resultados para os filtros que selecionou",
     "selectSomeOptions": "Selecione algumas opções e clique em Executar à esquerda.",
     "amount": "Valor",
+    "clearField": "Apagar",
     "advancedSearch": "Busca Avançada",
     "advancedSearchFields": {
       "code": "Código",
@@ -70,8 +71,8 @@
     },
     "transactionTypes": "Transaction Type",
     "switchTransactionTypes": {
-      "toAdvanced": "Switch to advanced: select transaction types",
-      "toSimple": "Switch to simple: select budget and/or spending"
+      "toAdvanced": "Passar para a vista avançada: selecionar tipos de transação",
+      "toSimple": "Mudar para a vista simples: selecionar orçamentos e/ou despesas"
     },
     "reportingOrganisationGroup": {
       "select": "Selecione grupos de organizações relatórios para organizações que publicam dados em várias organizações relatórios.",
