--- a/locales/es.json
+++ b/locales/es.json
@@ -11,7 +11,7 @@
     ["/es/introduction/", "Antecedentes"],
     ["/es/methodology/", "Metodología"],
     ["/es/data-notes/", "Notas sobre datos"],
-    ["/es/guidance-analysis/", "Paneles de orientación y análisis en Excel"]
+    ["/es/guidance-analysis/", "Orientación"]
   ],
   "accessAnalyseOptions": [
     {
@@ -54,6 +54,7 @@
     "noResults": "Los filtros seleccionados no han arrojado resultados.",
     "selectSomeOptions": "Seleccione algunas opciones y haga clic en “Ejecutar” a la izquierda.",
     "amount": "Valor",
+    "clearField": "Borrar",
     "advancedSearch": "Búsqueda avanzada",
     "advancedSearchFields": {
       "code": "Código",
@@ -70,8 +71,8 @@
     },
     "transactionTypes": "Transaction Type",
     "switchTransactionTypes": {
-      "toAdvanced": "Switch to advanced: select transaction types",
-      "toSimple": "Switch to simple: select budget and/or spending"
+      "toAdvanced": "Pasar a la vista avanzada: seleccionar los tipos de transacción",
+      "toSimple": "Cambiar a vista simple: seleccionar los presupuestos y/o los gastos"
     },
     "reportingOrganisationGroup": {
       "select": "Seleccione grupos de organizaciones notificadoras para organizaciones que publican datos bajo varias organizaciones notificadoras.",
