Allow transaction type as a drilldown

--- a/locales/en.json
+++ b/locales/en.json
@@ -121,7 +121,8 @@
       "humanitarian": "Humanitarian / Development",
       "year.year": "Calendar Year",
       "quarter.quarter": "Calendar Quarter",
-      "calendar_year_and_quarter.calendar_year_and_quarter": "Calendar Year and Quarter"
+      "calendar_year_and_quarter.calendar_year_and_quarter": "Calendar Year and Quarter",
+      "transaction_type.code": "Transaction Type"
     },
     "unavailableDrilldowns": {
       "transaction_type": "Resource Flows",
